--- a/episodes/001.md
+++ b/episodes/001.md
@@ -1,6 +1,9 @@
-貧弱な弓だ。オッダはそう呟くと、村一番の弓師に作らせたはずのそれを、音を立てて床に置いた。村の外のニムを追い払うために使うのならば、家の門のそばから放っても森を越えるくらいの飛距離が必要である。
-ニムはぶよぶよとした丸っこい生き物で、幅はおよそヨンチの木ぐらい、高さはオッダの膝ほどである。腕も無いのに、ニムはオッダより早く動く。体には目のようなものが一つあり、その他の部分は黒い砂の棘で覆われている。この棘はニムの体表を循環するように動いているが、地面に触れているところは全く平らであり、ニムの動いた跡はわずかに滑りが残るだけであった。
-ニムの曖昧な体には、どろどろとした肉で覆われた鉄の芯とばねが入っている。鉄芯の左にある心臓を傷つければ、粘ついた体液を残して死ぬ。
+# 汗血馬
+
+貧弱な弓だ。
+オッダはそう呟くと、村一番の弓師に作らせたはずのそれを、音を立てて床に置いた。
+村の外のニムを追い払うために使うのならば、家の門のそばから放っても森を越えるくらいの飛距離が必要である。
+ニムはぶよぶよとした丸っこい生き物で、幅はおよそヨンチの木ぐらい、高さはオッダの膝ほどである。腕も無いのに、ニムはオッダより早く動く。体には目のようなものが一つあり、その他の部分は黒い砂の棘で覆われている。この棘はニムの体表を循環するように動いているが、地面に触れているところは全く平らであり、ニムの動いた跡はわずかに滑りが残るだけであった。ニムの曖昧な体には、どろどろとした肉で覆われた鉄の芯とばねが入っている。鉄芯の左にある心臓を傷つければ、粘ついた体液を残して死ぬ。
 オッダはニムのばねを加工して量りを作り、それを売ることで生計を立てていた。これは立派な仕事だが、ニムが絡んでいるために、オッダは不可触の扱いを受けている。
 この村で手に入る弓は、どれだけ近くから射ろうともニムを殺すこともできない威力しか持ち合わせていない。流れ者であるためまともな職にありつけなかったオッダは、剣でニムを殺し、〈不落の民〉として村の外れにある小川のそばに住まうことを余儀なくされた。
 ニムは古くからこの村の近くにのみ現れるため、様々な伝承が残っていた。ニムは悪神の遣いで、死ぬときに剣を持つものに呪いをかけると言う。そのため、剣でニムを殺すことは容易にもかかわらず、人々はニムを剣で殺すことと、ニムに触れることを避けた。もしニムを食べることができれば、剣を手に持たずに、かつもっと簡単にニムを殺すことのできる猟具を造っただろうが、ニムを殺してとれるものは、ばねと粗悪な鉄と膠くらいで、労力を割いて新たな猟具を開発するものはこの村にいなかった。
@@ -8,50 +11,50 @@
 オッダは村の者に話しかけるとき、目以外をすべて布で覆い、まばたきでまつ毛が落ちることを防ぐため、ニムの膠をまつ毛に塗る。ニムの膠の臭いは、不落の民の象徴だった。
 
 霧の濃い朝、オッダが家の外でニムの体液を自分になすりつけて体を冷やしているとき、誰かが小枝を踏む音が聞こえた。オッダは明瞭に、80デシベルで発声した。
-「誰か*いますか？」
+「誰かいますか？」
 「ああ」
 至極単純なその一声は、村で聞く人々の声とは一線を画していた。オッダには何が違うのか明確にわかったが、それを言語化することは不可能だった。
 「急に村に入ってすまない」
 幽玄の中に男が現れた。生糸のような白く短いうねり髪が朝日に透けていた。逆光で顔がよく見えない。
-「あなた*誰ですか？」
+「あなた~誰ですか？」
 オッダは応答求むのハンドサインをした。
 「新調は久しぶりに聞いたな……私はエーテル、火星から来た」
 エーテルは丁寧語破棄のハンドサインを返して、お辞儀をした。オッダもそれに返す。顔を上げたエーテルは透明な仮面をつけていた。息を吐くたびにそれが曇って、くすんだ唇の色を隠している。
-「エーテル*よろしく」
+「エーテル~よろしく」
 「きみは？」
 「きみ？」
 「あ、わからないのか。あなただよ、あなた……なんできみ、のほうが短いのにあなた、になったんだろうな」
 「オッダ」
 オッダは自らの鼻を指差した。
 「そうかい、オッダ。ここはなんて言う村だ？」
-「T-995地区*2551年前*リャージ村*呼ばれていた」
+「T-995地区~2551年前~リャージ村~呼ばれていた」
 「そうか、なるほど。いや、暑いね。こんなマスクつけてちゃ話にならないよ。きみ……あなたは平気かい？」
-「なぜなら*付近*有害気体*対策*行われている」
+「なぜなら~付近~有害気体~対策~行われている」
 「あ、うん。じゃあ、外そうかな」
-エーテルはきゅぽんという小気味よい音を立て、マスクを外した。口のまわりに円い跡がついている。
+エーテルはきゅぽんという小気味よい音を立て、仮面を外した。口のまわりに円い跡がついている。
 エーテルがマスクに繋がれたケーブルを軽く引っ張ると、バックパックの凹みにマスクが収納された。
 会話が途切れた。オッダは用件求むのサインをした。
 「あー、きみにね、会いに来た」
-「キミ*好む*不明」
+「キミ~好む~不明」
 「……いや、まあ、その……冗談だよ。愛の告白じゃない。ここらへんの調査だよ」
 「ランドレベル2.5。平均気温24℃」
 「知ってるけどさ、実地調査ってやつだよ。分かってくれるかなあ」
-「95.5-1190.2*村長家」
+「95.5-1190.2~村長家」
 「案内してくれるかい？」
 「いいえ」
 「ええ！　頼むよ。僕にできることなら何でもするからさ、今すぐにじゃなくてもいいし」
 「はい」
 オッダはエーテルに向かって待機のハンドサインをすると、玄関に置きっぱなしの黒いローブを引っ被った。手の甲に残っていたニムの体液をまつげに塗って、〈不落の民〉の標準的な出で立ちが完成した。
-「なに？　それ、かっこいいね。マスカラ？　まつ毛ぱりぱりしてる」
-「不落の民*必要不可欠」
+「なに？　それ、かっこいいね。マスカラ？　まつ毛がぱりぱりしてる」
+「不落の民~必要不可欠」
 「不落の民？　その格好じゃないといけないのか？」
 「はい」
 「ちらっと見えてしまったんだが、部屋の床に置いてあるあれは何？」
 「弓」
 「弓？　何に使うんだ？」
-「ニム*殺す*威力不足」
+「ニム~殺す~威力不足」
 「ニム？」
-「ニム*異邦人*姿*見せない」
+「ニム~異邦人~姿~見せない」
 エーテルを部屋に招いて、オッダは膠を取り出す前のニムの死体を納屋から取り出した。エーテルはニムの死体を見ると目を輝かせた。死体をエーテルに手渡し、オッダは壁の棚にあるナイフを手にとり、腰のベルトループにぶら下げた。また、ローブの内側のポケットにくるみとホイッスルが入っていることを確認した。
 「それが弓か。それで、これをニムって呼ぶのかい？」
 「はい」
@@ -65,7 +68,7 @@
 「どこいくの？　ついていっていいかい？」
 「狩り」
 「え？　だってニムは殺せないって」
-「ナイフ*使用」
+「ナイフ~使用」
 「急所とかあるのか？」
 「心臓」
 「やっぱり生物か」
@@ -86,7 +89,7 @@
 棘の流動がいつもより早い。警戒しているのだ。足音は抑えていたつもりであったが、思わぬ来客にどうも気が乱れているらしい。オッダは姿勢をより低く保った。
 オッダはニムが射程範囲に近づいてくるとき、自らを植物であると思いこむようにしていた。柔らかい風の音、湿った土の匂い、周りの植物が出す声、太陽光の青さ、根から感じる味……その全てがオッダの心を占めて、壁で覆われたように動けなくなる。
 ニムの色はうすぼんやりとして、心臓の赤さだけがやけに目立ったように見える。鉄臭い匂いと土を粘液で湿らせる音が伝わってくる。ニムが射程の五メートル圏内に入った。
-人間へ戻る時が来た！　
+人間へ戻る時が来た！
 オッダはナイフを拾い、ニムめがけて一直線に走る。ニムは驚いたように一瞬体表の棘を空に向けたあと、今までの緩慢な動きが嘘であったかのように、地面を滑り駆けていく。
 しかしもうオッダはニムの背後に迫っていた。ニムは振り返り、体内のバネを激しく上下させ、ジリジリという威嚇音を立てる。オッダはローブを跳ね除けるように右手を突き出し、ニムの心臓めがけてナイフを深く刺した。
 二十センチメートルの刃がニムの硬くなった体表を確実に貫き、心臓へと突き刺さっていることを確認すると、オッダは素早く仕留めたニムから後ずさりした。
@@ -111,7 +114,7 @@
 
 エーテルはほとんどミアギコ草の実を取り終わっていた。
 「こういう細かい作業好きなんだ、これ食べれるんだな。ここに来るまでにたくさん見たよ」
-「はい*ありがとう」
+「はい~ありがとう」
 オッダは納屋から薪と枯れ葉と点火器を取り出して、薪を小石の多い場所に置いた。日差しが白砂利を照らし、辺りは眩しい。
 「暑くないかい？　日陰で焚き火したほうがいいよ」
 今まで気にしたこともなかったが、たしかに日陰で焚き火をしたほうが体表温度が下がる。薪の場所をヨンチの木の下へ移した。
@@ -121,25 +124,25 @@
 エーテルは独りごちた。
 さらに納屋から鍋を取り出し、先ほど汲んできた水を注いだ。
 「鍋だ。鉄製だな……」
-「鉄*得る*ニム」
+「鉄~得る~ニム」
 「へえ、便利だね……ここは製鉄技術もあるのか」
 鍋にミアギコ草の実をひとつかみ放り込んで、再び納屋に行こうとするとエーテルが声をかけた。
 「納屋で調理しなよ、僕に見せてくれているなら嬉しいけどさ。僕が納屋にいけばいいんだ、そうだろ？」
 オッダは自分でも気づかぬうちにエーテルという存在に動揺していたことを実感した。この程度の推論と提案ができないほど、頭脳がおかしくなっているのだろうか？
 オッダは文字通り焚き火を手に持って移動すると、エーテルは救援のハンドサインのような動きを繰り返した。
 「おいおいおい！　熱いだろ！？　早く置きなよ！」
-「感度良好*表面温度*摂氏358℃」
+「感度良好~表面温度~摂氏358℃」
 「手焦げてるけどいいのか？」
-「修復*自動」
+「修復~自動」
 焦げ付いた表皮は、じわじわと元の形状を取り戻していく。
 「便利なものだなあ」
-「機械*故」
+「機械~故」
 エーテルは思考のハンドサインを取った。
 「キミ……本当に機械なのかな」
-「村長*伝達*故」
+「村長~伝達~故」
 「村長か……」
 「僕には、君が機械だとは思えないんだよ」
-「何*故」
+「何~故」
 「……悪いとは思ったけど勝手にそこのごみ箱を漁らせてもらった。……生ごみの腐敗度合いから見るに、君が一日に摂取する食物量はほとんど平均的な人間と変わらない。もちろん、生体部品からエネルギーを得ているロボットもいるが、君はあまりにも生体部品の割合が多い。はじめから人間だったとしか思えないが……」
 エーテルは修復されたオッダの指を見つめた。
 「百年以上昔の話になる。地球では壊滅的な自然災害が立て続けに発生した。君は知っているかい？」
@@ -154,11 +157,11 @@
 「納屋の中、結構広いんだな。外からだとよくわからなかった」
 「はい」
 「これはスパイスとか保存食だな。この辺では肉が取れなそうだけど、タンパク質は魚とかで補っているのか？」
-「エーテル*否*食す」
+「エーテル~否~食す」
 「え？　僕も食べたいんだけど、肉があるなら」
 「いいえ」
 「なんで？」
-「培養肉*安全性*低」
+「培養肉~安全性~低」
 「お腹壊すの？　培養肉なのに？」
 「いいえ」
 「病気になるとか？」
@@ -172,9 +175,9 @@
 「いいえ」
 「僕しかいないんだから、別に良いんだよ。どんな言葉遣いだろうと」
 オッダは癖がつくと困ると口に出しそうになった。
-「不落の民*否*旧調」
+「不落の民~否~旧調」
 「なぜだ？」
-「村長*のみ*知る」
+「村長~のみ~知る」
 「ますます、村長に会う理由が増えたね」
 「悪い人ではない」
 「また出ちゃってるよ」
@@ -183,7 +186,7 @@
 エーテルに玉葱と人参の皮を剥いて包丁で適当な大きさに切るように告げると「料理作ったことないけど頑張るぞ！」と言ったため、結局オッダが野菜を切ることになった。
 続いてオッダは昨晩血抜きして羽根をむしったカルカドル鳥を解体し、もも肉を細かくして鍋に入れた。
 「培養肉以外もあるんだ」
-「カルカドル鳥*否*味気」
+「カルカドル鳥~否~味気」
 「味気ないのか」
 
 「え？ おいしいよこれ。味の好みが別れるんだな」
@@ -193,13 +196,13 @@
 「おお、美味しそうな香り。中華料理を日本風にアレンジしましたといった感じだ」
 「はい」
 「人の家の粥ってなんで美味しそうに見えるのかな」
-「新鮮*故」
+「新鮮~故」
 「そうか」
 
 「エーテル」
 「なんだい」
 オッダは用件求むのハンドサインをした。
-「目的*不明」
+「目的~不明」
 「ここに来た理由のことか」
 「はい」
 「さっき言った気がしたけど、きみに会いに来たんだ」
